Fix db migration script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - ./.env
     volumes:
       - ./src:/app/src
+      - ./scripts:/app/scripts
     ports:
       - "5000:5000"
     depends_on: 
